--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/cli": "^3.78.1",
     "@sanity/client": "^6.28.3",
-    "@sanity/image-url": "^1.1.0",
-    "next": "15.1.6",
+    "@sanity/icons": "^3.7.0",
+    "@sanity/image-url": "1",
+    "@sanity/types": "^3.78.0",
+    "@sanity/ui": "^2.15.2",
+    "@sanity/vision": "3",
+    "next": "^15.0.0",
+    "next-sanity": "9.9.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sanity": "^3.78.0",
+    "styled-components": "^6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
